 * X11 Screen: support for capturing partially hidden windows

Codecs:
 * You can now use ffmpeg-mt in conjunction with vlc
 * Important fixes for RealVideo 3.0 and 4.0 playback, notably in MKV
 * Experimental Hardware decoding using Broadcom CrystalHD cards
 * New module for decoding EBU subtitles (.stl)
 * Support for 9bits and 10bits H.264/AVC decoding

Demuxers:
 * New images demuxer supporting jpeg, png, targa, xcf, git, tiff, bmp, pcx, lbm
 * C64 SID file playback support using sidplay2
 * Ogg seeking improvements
 * Support for images/cover art in wma/wmv/asf files
 * Improvements in .ape files metadata reading and writing
 * New demuxer module for EBU subtitles (.stl)

Interfaces:
 * Skins2 / Qt: misc improvements and usability fixes
 * Qt: effects dialogs rework
 * Qt: new CoverFlow-like view of the playlist
 * Qt: port to MacOS X platform
 * Skins2: fullscreen controller support, relative placement support
   and important cleanups and optimisations
 * ncurses: heavy refactor of the complete interface
 * Mac OS X: new Audio Effects panel adding Compressor and Spatializer filters
 * Mac OS X: new Track Synchronization panel
 * The rc and telnet lua interfaces were merged into a new "cli" interface
 * dbus: Rewrite of the main loop to use a more efficient poll-based model
 * dbus: Upgrade to an mpris2 compliant interface, see http://www.mpris.org
 * webUI/http: Rewrite of the web interface, using jQuery

Video Output:
 * New video output based on Direct2D for Windows 7 and Vista (with Platform Update)
 * New video output for iOS platform
 * Experimental work in progress on a video output using EGL
 * Adaptation of the OpenGL layer for OpenGL ES 1.1
 * Various vmem improvements
 * OpenGL video output now accepts YUV as input and uses fragment programs for
   chroma conversion
 * New video output for Android platform, based on Surface
 * Support for 9/10bits output in the OpenGL output

Audio Output:
 * New audio output based on AudioQueue API for iOS