@@ -49,6 +49,7 @@ Codecs:
  * Experimental Hardware decoding using Broadcom CrystalHD cards
  * New module for decoding EBU subtitles (.stl)
  * Support for 9bits and 10bits H.264/AVC decoding
+ * Support for Lagarith Lossless video codec
 
 Demuxers:
  * New images demuxer supporting jpeg, png, targa, xcf, git, tiff, bmp, pcx, lbm
